--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -78,3 +78,7 @@
 .shadow-jubilation {
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
+
+.shadow-stiglitz {
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+}
