--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -82,3 +82,7 @@
 .shadow-stiglitz {
   box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 }
+
+.shadow-intense {
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 30px 90px;
+}
