--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -86,3 +86,23 @@
 .shadow-intense {
   box-shadow: rgba(0, 0, 0, 0.4) 0px 30px 90px;
 }
+
+.loader {
+  width: 48px;
+  height: 48px;
+  border: 5px solid #000;
+  border-bottom-color: transparent;
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
